--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
 <div>
 <body class="body">
     <section class="presentacion">
-        <h1>HOLA, SOY ROMAN !!!</h1>
+        <h1>HOLA, SOY ROMÁN !!!</h1>
     </div>
     </section>
+
     <div>
         <img class="imagen" src="./Roman.jpeg" alt="Foto de Román">
+    </div>
+    <div class="normal">
+        <p>
+            Soy un chico normal. Como todos.
+        </p>
+        <p class="escuela">
+            Voy a la escuela todos los días de la semana. Me gusta jugar a la pelota y practico TaeKwon-Do en un club que está cerca de mi casa.
+        </p>
     </div>
 </body>
 <footer class="footer">
